--- a/web_back/login.html
+++ b/web_back/login.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/iconfont.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" href="./js/bootstrap/css/bootstrap.min.css">
 </head>
 
 <body>
@@ -28,8 +29,79 @@
                 <input type="submit" class="input_sub" value="登 录">
             </form>
         </div>
+    </div>
+        <!-- 模态框 -->
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                                aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="myModalLabel">友情提示</h4>
+                    </div>
+                    <div class="modal-body">
 
-    </div> 
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">确定</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+   
+    <script src="./js/jquery-1.12.4.min.js"></script>
+    <script src="./js/bootstrap/js/bootstrap.min.js"></script>
+    <script>
+        // 入口函数
+        $(function () {
+            // 给登录注册点击事件
+            $('.input_sub').on('click', function (e) {
+                e.preventDefault()
+                // 获取内容
+                var username = $('.input_txt').val().trim()
+                var password = $('.input_pass').val().trim()
+                //    判断
+
+                if (username == "" || password == "") {
+                    $('.modal-body').text('兄弟你倒是写点啥啊')
+                    $('#myModal').modal({
+                        keyboard: true
+                    })
+                    return
+                };
+                //    发送ajax请求
+                $.ajax({
+                    type: 'post',
+                    url: 'http://localhost:8080/admin/user/login',
+                    data: {
+                        username: username,
+                        password: password
+                    },
+                    success: function (backData) {
+                        console.log(backData);
+                        if (backData.code == 200) {
+                            $('#myModal').modal({
+                                keyboard: true
+                            })
+                            window.location.href ='index.html'
+                        } else{
+                            $('.modal-body').text('你写错了呀 兄地')
+                            $('#myModal').modal({
+                                keyboard: true
+                            })
+                        }
+                    }
+                })
+
+
+            })
+        })
+
+
+
+    </script>
+
+
 
 </body>
 
