--- a/web_back/article_category.html
+++ b/web_back/article_category.html
@@ -72,7 +72,8 @@
                 <tfoot>
                     <tr>
                         <td colspan="3" class="text-center">
-                            <a href="#" class="btn btn-success" data-toggle="modal" data-target="#addModal">新增分类</a>
+                            <a href="#" class="btn btn-success" id="addadd" data-toggle="modal"
+                                data-target="#addModal">新增分类</a>
                         </td>
                     </tr>
                 </tfoot>
@@ -80,56 +81,264 @@
         </div>
     </div>
 
-    <div class="modal fade" id="addModal" >
+    <div class="modal fade" id="addModal">
         <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
-              <h4 class="modal-title">新增分类</h4>
-            </div>
-            <div class="modal-body">
-              <form>
-                <div class="form-group">
-                  <label for="recipient-name" class="control-label">分类名称:</label>
-                  <input type="text" class="form-control" id="recipient-name">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
+                    <h4 class="modal-title">新增分类</h4>
                 </div>
-                <div class="form-group">
-                  <label for="message-text" class="control-label">分类别名:</label>
-                  <input type="text" class="form-control" id="recipient-name">
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <input type="hidden" id="cataId">
+                            <label for="recipient-name" class="control-label">分类名称:</label>
+                            <input type="text" class="form-control" id="recipient-name">
+                        </div>
+                        <div class="form-group">
+                            <label for="message-text" class="control-label">分类别名:</label>
+                            <input type="text" class="form-control" id="recipient-slug">
+                        </div>
+                    </form>
                 </div>
-              </form>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" id="model_shutoff">关闭</button>
+                    <button type="button" class="btn btn-primary" id="model_add">新增</button>
+                </div>
             </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-default" id="model_shutoff">关闭</button>
-              <button type="button" class="btn btn-primary" id="model_add">新增</button>
-            </div>
-          </div>
         </div>
-      </div>
+    </div>
 
-      <script>
-          $('#addModal').modal({
-            show:false,
-            backdrop:false
-          });
+    <script>
+        $('#addModal').modal({
+            show: false,
+            backdrop: false
+        });
 
-          $('#model_shutoff').click(function(){
+        $('#model_shutoff').click(function () {
             alert('shutoff');
             $('#addModal').modal('hide');
-          });
+        });
 
-          $('#model_add').click(function(){
-            alert('add');
-            $('#addModal').modal('hide');
-          });
+        //   $('#model_add').click(function(){
+        //     alert('add');
+        //    
+        //   });
 
-          $('.category_table').delegate('a','click',function(){
-              if($(this).hasClass('btn-info')){
-                $('#addModal .modal-title').html('修改分类名称');
+
+    </script>
+
+    <script src="./js/template-web.js"></script>
+    <script id="articleList" type="text/html">
+ {{each data v}}
+ <tr>
+    <td>{{v.name}}</td>
+    <td>{{v.slug}}</td>
+    <td class="text-center">
+        <a href="#" data_id="{{v.id}}"
+            class="btn btn-info btn-xs ">编辑</a>
+        <a href="#"  data_id="{{v.id}}" class="btn btn-danger btn-xs btn-delete">删除</a>
+    </td>
+</tr>
+ {{/each}}
+
+</script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <script>
+        $(function () {
+            // 进入页面发送ajax亲求
+            function articleall() {
+                $.ajax({
+                    url: 'http://localhost:8080/admin/category/list',
+                    success: function (backData) {
+                        console.log(backData);
+                        var resHmtl = template('articleList', backData);
+                        $('tbody').html(resHmtl)
+                    }
+                });
+
+            }
+            articleall()
+
+
+
+              注册新增按钮
+            $('#model_add').on('click', function () {
+                if ($(this).hasClass('btn-success')) {
+                        //   获取用户信息  
+                  var cataId = $('#cataId').val();
+                  var artName=  $('#recipient-name').val();
+                  var slugName = $('#recipient-slug').val();
+                    // 发送ajax请求
+                    $.ajax({
+                        type:"post",
+                        url:'http://localhost:8080/admin/category/edit',
+                        data:{
+                            id:cataId,
+                            name:artName,
+                            slug:slugName
+                        },
+                        success:function(backData){
+                           console.log(backData);
+                           if (backData.code == 200) {
+                                alert('修改成功')
+                                articleall()
+                            }
+                            $('#recipient-name').val("");
+                            $('#recipient-slug').val("");
+                        }
+                    })
+                       
+
+
+                } else {
+                    // 获取用户信息
+                    var artName = $('#recipient-name').val()
+                    var slugName = $('#recipient-slug').val()
+                    //  发送ajax请求
+                    $.ajax({
+                        type: 'post',
+                        url: 'http://localhost:8080/admin/category/add',
+                        data: {
+                            name: artName,
+                            slug: slugName
+                        },
+                        success: function (backData) {
+                            console.log(backData);
+                            if (backData.code == 201) {
+                                articleall()
+                            }
+                            $('#recipient-name').val('')
+                            $('#recipient-slug').val('')
+                        }
+
+                    })
+                }
+                $('#addModal').modal('hide');
+            })
+
+
+
+            $('tbody').on('click', 'a.btn-info', function () {
+                $('#addModal .modal-title').html('修改分类');
                 $('#addModal').modal('show');
-              }
-          })      
-      </script>
+
+                $('#model_add').text('修改').addClass('btn-success');
+                      //   获取用户信息  
+                      var id = $(this).attr('data_id');
+                    // 发送ajax请求
+                    $.ajax({
+                        url:'http://localhost:8080/admin/category/search',
+                        data:{
+                            id:id,
+                        },
+                        success:function(backData){
+                           console.log(backData);
+                        $('#cataId').val(backData.data[0].id)
+                        $('#recipient-name').val(backData.data[0].name);
+                        $('#recipient-slug').val(backData.data[0].slug);
+                        }
+                    })
+                    $('#addModal').modal('show');
+            })
+
+            
+            $('#addadd').on('click', function () {
+                $('#addModal .modal-title').html('新增分类');
+                $('#model_add').text('新增').removeClass('btn-success');
+
+
+
+            })
+            // 注册删除键
+            $('tbody').on('click', 'a.btn-delete', function (e) {
+                e.preventDefault()
+                //   获取id
+                var id = $(this).attr('data_id');
+                if (confirm('确定要删除吗?')) {
+                    // 发送ajax
+                    $.ajax({
+                        type: 'post',
+                        url: 'http://localhost:8080/admin/category/delete',
+                        data: {
+                            id: id
+                        },
+                        success: function (backData) {
+                            console.log(backData);
+
+                            articleall()
+                        }
+                    })
+                }
+            })
+
+
+        }) 
+
+
+    </script>
+
 
 </body>
 
